--- a/image_checker/logging_config.json
+++ b/image_checker/logging_config.json
@@ -3,7 +3,7 @@
    "disable_existing_loggers":false,
    "formatters":{
       "error":{
-         "format":"%(message)s"
+         "format":"Bad file: %(message)s"
       },
       "standard":{
          "format":"%(asctime)s [%(levelname)s] %(name)s: %(message)s"
